concord_macros/tests/dsl/fail/fail_raw_auth_in_route_atom.rs
use concord_core::prelude::*;
use concord_macros::api;

api! {
    client RawAuthRouteAtomApi {
        base "https://example.com"
    }

    GET Ping
    path [r#auth.token]
    -> Text<String>
}

fn main() {}
